--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,8 @@
     <title>{% block title %}{% endblock %}</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <div class="flex flex-col items-center">
+<body class="bg-gray-100">
+    <div class="container mx-auto p-4">
         {% block content %}
         {% endblock %}
     </div>
